package utils;

public interface ISaveable {

    void save();
}