package utils.language;

public class LanguageDanish {
}