package media;

public interface IMovie extends IMedia {

    int getYear();
}