package utils.language;

public interface ILanguage {
}