package media;

public interface ISeason {
    int getSeasonNumber();
    int getEpisodeCount();
}